[package]
name = "jura_os"
version = "0.1.0"
edition = "2018"

[dependencies]
# bootloaderの機能を有効化 => features
# map_physical_memoryは全物理メモリを仮想アドレス空間のどこかにマッピングする => 全ての物理メモリにアクセス可能
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
# for cargo run
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-drive", "file=os_disk.img,format=qcow2"]

# 0xf4ポートの4byte
# -display noneでQEMUを隠すことができる
# for cargo test
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33  # (0x10 << 1) | 1

# should_panicテストをtest_runnerから無効化
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
